[Spotless] Applying Google Code Format for opensearch directory (pt 2/2) #17 (#1978)
* spotless apply for OpenSearch P2.

Signed-off-by: Mitchell Gale <Mitchell.Gale@improving.com>

* Spotlesss apply run

Signed-off-by: Mitchell Gale <Mitchell.Gale@improving.com>

* Addressed PR comments

Signed-off-by: Mitchell Gale <Mitchell.Gale@improving.com>

* Apply suggestions from code review

Co-authored-by: Guian Gumpac <guian.gumpac@improving.com>
Signed-off-by: Mitchell Gale <Mitchell.gale@improving.com>

* spotless apply

Signed-off-by: Mitchell Gale <Mitchell.Gale@improving.com>

* fixed json formatting in test.

Signed-off-by: Mitchell Gale <Mitchell.Gale@improving.com>

---------

Signed-off-by: Mitchell Gale <Mitchell.Gale@improving.com>
Signed-off-by: Mitchell Gale <Mitchell.gale@improving.com>
Co-authored-by: Guian Gumpac <guian.gumpac@improving.com>